2011-06-13  Murray Cumming  <murrayc@murrayc.com>

	Get the path to the pangomm and atkmm m4 files.

	* configure.ac: Fix the build by getting and using the paths to 
	the pangomm and atkmm m4 files as well as the gtkmm one.
	These are only actualy used by the gtkmm m4 file, and it is 
	tedious to have to do this explicitly, of course.

2011-05-28  Andreas Klaedtke  <andreas.klaedtke@gmx.net>
 
 	Class hierarchy for class GridModel changed (Bug #651355).
 	
 	* various files: GridModel is now derived from ItemModelSimple.
	
2011-06-12  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Correct null pointer conversion from Goocanvas::Canvas* to GooCanvas*.

	* codegen/m4/convert_libgoocanvasmm.m4: Use Glib::unwrap(x) instead of
	x->gobj(), avoiding a crash when x is 0. Bug #606357.

1.90.4:

2011-03-30  Murray Cumming  <murrayc@murrayc.com>

	Avoid a tarball dependency on mm-common.

	* configure.ac: Require the latest version of mm-common.
	Call MM_CONFIG_DOCTOOL_DIR() to createe, use, and dist a local copy of the
	mm-common scripts.

2011-02-24  Murray Cumming  <murrayc@murrayc.com>

	Build the tests during make check too.

	* configure.ac: Mention the tests/Makefile.am file.
	* Makefile.am: Add tests to SUBDIRS.
	* tests/Makefile.am: Specify the test to build here, and its source code.
	* tests/child_properties/Makefile.am: Remove.

2011-02-24  Murray Cumming  <murrayc@murrayc.com>

	Build the examples during make check (and distcheck).

	* Makefile.am: Add examples to the SUBDIRS.
	* examples: Remove the individual Makefile.am files, adding their contents
	to examples/Makefile.am.

	The build of the examples was apparently disabled since we converted the build
	to use mm-common.

1.90.3:

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Correct the use of Glib::ListHandler.

	* goocanvas/src/item.ccg: Fix a compilation error and do not try to
	remember the temporary value from data().

2011-01-28  Murray Cumming  <murrayc@murrayc.com>
